Fix ul bullet alignment in style.css

--- a/style.css
+++ b/style.css
@@ -7,9 +7,15 @@ p {
     font-style: italic;
 }
 
+
 * {
 	margin: 0
   }
+
+ul {
+	text-align: center;
+	list-style-position: inside;
+}
 
 .todo-container {
 	display: flex;
